added notes for 01.26.24

--- a/raw-notes/2024-01-19.md
+++ b/raw-notes/2024-01-19.md
@@ -1,19 +1,19 @@
 # Goal: Update AJAX Plugin to be Singleton Pattern
 
 ## Process: 
-- [ ] PR Changes 
+- [ > ] PR Changes 
   1. Code Sniffer changes
   2. Juan comment RE: '@since' and '@version' to docblock
   3. Reframe readme.txt phrasing 
-- [ ] AJAX Inspector Changes
-  1. [ ] Make changes based on Gustavo's Code Review 
+- [ > ] AJAX Inspector Changes
+  1. [x] Make changes based on Gustavo's Code Review 
   2. [x] Read TEC Standards Docs
-  2. [ ] Update AJAX Inspector based on TEC standards
-  2. [ ] Read Pattern resources
-  3. [ ] Update AJAX Inspector to be a Singleton Pattern 
-  3. [ ] Wrap head around composer more 
-  4. [ ] Add methods that enables hooks and removes hooks 
-  5. [ ] Add DocBlocks for everything 
+  2. [x] Update AJAX Inspector based on TEC standards
+  2. [x] Read Pattern resources
+  3. [x] Update AJAX Inspector to be a Singleton Pattern 
+  3. [x] Wrap head around composer more 
+  4. [ > ] Add methods that enables hooks and removes hooks 
+  5. [ > ] Add DocBlocks for everything 
 
 ## Resources:
 - https://www.patterns.dev/vanilla/singleton-pattern
