--- a/raw-notes/2024-01-26.md
+++ b/raw-notes/2024-01-26.md
@@ -1,6 +1,32 @@
-# Notes
+# Dev Day Jan 26
 
-### Deets
+## Goals:
+- [x] Add changes suggested by Juan to [this PR](https://github.com/the-events-calendar/event-tickets/pull/2900)
+- [x] Keep going with last week's tasks related to AJAX plugin 
+  - [x] Add methods that enables hooks and removes hooks
+  - [x] Add DocBlocks for everything
+  - [x] Add external CSS file 
+  - [x] Tweak the functionality to be more useful regarding AJAX specific to TEC 
+
+### Notes from Dev Day
+- Methods that enable and remove hooks
+  - Using [here](https://github.com/the-events-calendar/the-events-calendar/blob/3308afdb3c45bc20773ead9dda89baa7bca24323/src/Tribe/Main.php#L345) as a model
+  - Reason for having a method for hooks/actions is to group/organize the hooks and control that they are initialized when the plugin is active 
+  - Sorting through TEC as a model, but getting a bit lost in how things are bootstrapped together 
+    - There's a whole `Tribe__Events__Deactivation` class (which extends an [abstract class](https://www.w3schools.com/php/php_oop_classes_abstract.asp) `Tribe__Abstract_Deactivation` )
+    - Reading through everything it seems like this is only necessary to perform tasks such as setting default options, creating database tables, or cleaning up resources when a plugin is activated or deactivated.
+      - Currently, my plugin does not do any of these things, so it feels okay to skip this 
+- CSS
+  - Need to research PostCSS more
+    - Create a resources folder -> create a postcss directory
+    - Compile the PostCSS into CSS by running gulp
+    - PostCSS file structure seems to be complicated, but the benefit is that you can easily set up reusable variables
+    - I think I _could_ keep digging into setting up PostCSS but I should probably focus more on the functionality of my plugin
+    - For now, I'll just add a classic CSS file to style my button
+- JS
+  - Hurts my brain switching back to JS 
+
+### Notes on Troubleshooting Dev Site Issue 
 - Dev site being weird again 
   - Asked in Slack here: https://lw.slack.com/archives/G01H7Q57P1C/p1706032620927639
   - Issue = even though I updated plugins in the "usual" way and they are showing as the updated version in the plugin tab and I can see all the updated files, none of the new functionality is showing. \
@@ -21,4 +47,28 @@
         - Tried checking out the database to see what might be happening to the wp_options table, and I'm seeing a connection refused error - but I think that's just a PHPStorm setting issue or something because DBeaver works fine
         - I looked at the DB and using phpMyAdmin the sandbox's db, but they both didn't have the `flexible_tickets_activated = 1` in the options table???
         - Tried using `lando wp shell` and then `tribe_get_option( 'flexible_tickets_activated');` but it's returning as true???? 
-        - 
+    - Another blue team update came through so updating those plugins - got more errors! 
+  - Working with Gustavo in our 1:1 we figured out that this was caused from the `stellarwp/codingstandards` being updated but the `composer.json` file in ET and ETP were not updated
+    - Also potentially an issue was with how I was updating my plugins (not using `--no-dev`) and need to `stash` see below for new command to use
+
+### Notes from 1:1 
+- Get in the habit of using mouse as little as possible!
+  - `cmd + shift + F` -> search files
+  - `cmd + click` -> look up the stack to see where what you're clicking on is defined
+  - `double click` -> when functions/variables are all underlined you can just double click to highlight the whole thing
+  - Turn off the debugger with the tool bar to the top right 
+    - Phone turns listener on/off
+- When updating plugins, the php version of your site *needs* to match the platform php version in the plugin's `composer.json`  
+- Key Concepts to review: Containers vs Providers and `action_register` -> the last one is something Luca built to check the `do_action` and hook together different checks 
+- `tail -f wp-content/debug.log` -> way to see the most recent output from the debug log in the terminal 
+- `git config --global alias.supdate "submodule update --init --recursive"` -> set up an alias git command `supdate` to automatically refresh to current repo (?)
+- For updating plugins from repo, after `git checkout master && git pull`
+  - If the plugin has common (TEC or ET):
+   ` rm -rf composer.lock vendor && composer install --no-dev && git stash && cd common && rm -rf composer.lock vendor && composer install --no-dev && git stash && cd ..`
+    Doesnt have common:
+    `rm -rf composer.lock vendor && composer install --no-dev && git stash`
+- The `--no-dev` is important because dev can only be pointing to ONE plugin at a time. If the `--no-dev` is not specified, this can cause issues
+- Learned a lot about REST API 
+  - Learning documented in [this ticket](https://ithemeshelp.zendesk.com/agent/tickets/556903)
+  - Also posted in [Slack](https://lw.slack.com/archives/G01H7Q57P1C/p1706206358604149), just to practice asking questions there
+- I temporarily turned off PHPCS highlighting! It was driving me a little craaaazy - but when I want to turn it back on it's PHPStorm > Preferences > PHP > Debug > Quality Tools 
