--- a/raw-notes/2023-09-08.md
+++ b/raw-notes/2023-09-08.md
@@ -26,11 +26,11 @@
 3. Run the command `lando wp db clean --yes` to delete all the existing tables for the site (don't worry, that's why you backed everything up!)
 4. Run the command `lando wp db import [db_name].sql`
 5. Run the command `lando wp db prefix` to see the prefix that the tables use. If it is different than `wp_` edit the wp-config.php file to match what it is
-6. Using the following command as an example `lando wp search-replace 'http://customer-domain.com' 'https://stable-dev.lndo.site/'` to modify all database records to point to your local domain
-   - If you're unsure of the site's domain, you can look in the wp_options table
+6. Using the following command as an example `lando wp search-replace 'http://customer-domain.com' 'https://stable.dev.lndo.site/'` to modify all database records to point to your local domain
+   - If you're unsure of the site's domain, you can look in the wp_options table or run `wp option get siteurl`
 7. If you don't have admin credentials for the site, use the following command to create your own admin user: `lando wp user create sam sam.dokus@theeventscalendar.com --user_pass=password --role=administrator --allow-root`
-8. Go to 'https://stable-dev.lndo.site/' and log in with your admin user
-9. Once you're done you can switch back to your database by following the same process but importing the backup database instead of the customer's
+8. Go to 'https://stable.dev.lndo.site/' and log in with your admin user
+9. Once you're done you an switch back to your database by following the same process but importing the backup database instead of the customer's
 
 _Note:_ Plugins that were active on the production site that are not present on the local installation will get automatically deactivated when you navigate to /wp-admin/plugins.php. These can be imported and added to the wp-content folder by using one of the plugins listed in the Resources section above
 
