corrected some notes

--- a/raw-notes/2024-02-02.md
+++ b/raw-notes/2024-02-02.md
@@ -26,8 +26,9 @@
   - [Ticket](https://ithemeshelp.zendesk.com/agent/tickets/560304 )
   - [Slack Thread](https://lw.slack.com/archives/C01T0TSD4SC/p1706889837946709)
 - Spent ~3 hours trying to get the `tribe_context` demo plugin working so the shortcode could dynamically accept the location key and output the correct location value based on the context
-  - Got blocked because it seems like using AJAX to make the call from the AJAX call is returning null:
+  - Got blocked because it seems like trying to call tribe_context() on the backend via AJAX is returning null (possibly because it's trying to pull the context of the backend, which is not applicable?):
 ```php
 $output = tribe_context()->get($locationKey); // returning null
 ```
--  
+-  Started to use Query Monitor as a model for AJAX plugin by reading through the QM files 
+  - Didn't have a ton of time left to narrow down where they are catching AJAX calls, but it was really interesting to see how another larger plugin is structured
