--- a/raw-notes/2024-02-16.md
+++ b/raw-notes/2024-02-16.md
@@ -11,19 +11,17 @@
     - [ ] related series
   - In 1:1 with Andras we talked about doing a dev rant in a couple weeks to showcase this 
 
-- **Thursday - focus on AJAX plugin:**
+- **Thursday & Friday - focus on AJAX plugin:**
   - **Goal for plugin = print a specific AJAX call to the screen (specific to TEC)**
   - [x] Correct Namespace - use github handle for name
-    - [x] src shouldn't be part of the namespace 
-    - [ ] I wrote down "use composer instead" but I'm not sure what I mean by that
+    - [x] src shouldn't be part of the namespace
   - [ ] Make the same code be able to be enqueued in a widget and a shortcode
     - [x] Watch G's talk on Stellar__Assets
+    - [ ] Switch plugin to use tribe_assets() instead of wp_enqueue
     - [ ] From previous notes: This will mirror DRY code process used in ECP shortcodes etc
       - What do I mean by this? Like use ECP shortcodes as a model? 
-    - [ ] Switch plugin to use tribe_assets() instead of wp_enqueue
-  - [ ] Have CSS and JS files be enqueued in separate files using tribe assets and conditionally enqueuing only if the widget or shortcode is on the page.
-
-- **Friday:**
+    - [ ] Research the process of setting up a widget
+    - [ ] Have CSS and JS files be enqueued in separate files using tribe assets and conditionally enqueuing only if the widget or shortcode is on the page.
   - [ ] Look into gulp package.json - how should it be configured and how do I set that up?
       - For gulp, need a package.json associated for npm use 
   - [ ] Review composer and strengthen my understanding of the what and why of composer
@@ -34,11 +32,14 @@
 - Great example in actual code where `tribe_context()->get()` is used: `wp-content/plugins/events-pro/src/Tribe/Views/V2/Template/Title.php`
 - `tribe_context_locations` is the [hook](https://docs.theeventscalendar.com/reference/hooks/tribe_context_locations/) where the locations are merged per plugin
 -  Mark github PR suggestions as resolved so G is notified 
+- Namespace Note: Don't have the unique identifier be all caps, it should just be the first letter 
+- For the case of my plugin, I don't need to use `__construct` or check that it's in the WP environment, or use `private` declarations 
+- Instead of commenting out code, use a scratch file by doing `Cmd + Shift + n` and then searching for php
 
 - Namespace
-  - I like [this guide](https://wpreset.com/php-namespaces-wordpress-guide/)
+  - I like [this guide](https://wpreset.c__om/php-namespaces-wordpress-guide/)
 
-Enqueing Assets: 
+### Enqueing Assets: 
 - `Stellar__Asset` 
   - More declarative way of enqueing files
   - Visibility / Usability / Timing
@@ -50,4 +51,31 @@ Enqueing Assets:
   - Lots of methods available, though for my purposes I probably just need: 
     - register -> `tribe_asset( $origin, $slug, $file, $deps = [], $action = null, $arguments = [] )`
     - enqueue -> `tribe_asset_enqueue( $slug )`
-  - Question is, _where_ do I replace the enqueuing in my plugin? Should I just replace the WP enqueuing I had? 
+  - Before the assets can be registered, the plugin file, plugin file path, plugin directory, and plugin url all need to be defined
+    - (Lines 56 - 59 in `Plugin.php`)
+
+### Functionality of Plugin:
+- Ultimate goal of plugin is to print _something_ to screen... what is that something? 
+  - Specific TEC AJAX call - should I pick one and work backwards? 
+  - Seems like a lot of AJAX calls are used on the admin page... is it wrong that my current plugin is set up on the frontend? 
+  - Reminder: AJAX is a way of processing HTTP server requests without reloading the page 
+    - So what HTTP server requests can we create specific to TEC? 
+    - Let's just make a button that grabs all the existing events in the db using the API 
+- Eventually... refer to this [ticket](https://ithemeshelp.zendesk.com/agent/tickets/545879) where Eddie inspired this whole concept: 
+```php
+$pp_time = microtime(true);
+$last_time = microtime(true);
+$uuid = uniqid();
+
+add_action('all', function() use($pp_time, $uuid, $last_time) {
+	if(empty($_POST['action']) || $_POST['action'] != 'save-attachment') {
+		return;
+	}
+	$ct = microtime(true);
+	$delta = $ct - $last_time;
+	$last_time = microtime(true);
+	if(defined( 'DOING_AJAX' ) && DOING_AJAX && is_admin() && $delta > 3) {
+	   error_log($uuid.'-'.current_filter().' '.microtime(true));
+	}
+});
+```
