Added week of Feb 23 notes

--- a/raw-notes/2024-02-23.md
+++ b/raw-notes/2024-02-23.md
@@ -24,3 +24,22 @@ This week:
 - Next steps -> authentication with AJAX or REST API and difference between the two 
   - Create own REST endpoints 
   - Docs Site and Extensions workflow (-> github action)
+
+### Wednesday, Feb 21
+- [x] Documentation of all functions, actions, filters, variables
+- [x] Making sure anything printed to the screen is translatable
+- [x] Right now I have a button that does a REST API call, and I need to clean that up a bit to only return the title and date of the first 10 events
+- Used this as a model: https://theeventscalendar.com/knowledgebase/introduction-to-the-events-calendar-rest-api/ 
+
+### Thursday, Feb 22
+- [x] I should change the other button (currently creates a "test" WP AJAX call) to create a WP AJAX call that uses the ORM on the server side and returns that json object to the frontend to print the same info as the REST API call
+
+### Friday, Feb 23
+- [x] Internationalize JS file as well 
+  - Add `.pot` file eventually (?) 
+- [ ] Make sure the plugin is only enqueued if the shortcode is present 
+  - Stuck because there's an error _somewhere_ in the tribe_asset() call
+    - G suggested changing the action to `'wp_enqueue_scripts'` and when that didn't help inspecting the `$this` object 
+- [ ] Make the code available as a widget and a shortcode
+  - Widget Notes
+- [ ] Test that composer is set up correctly by simulating copying the repo as a new project 
