Added March 08 Notes

--- a/raw-notes/2024-03-01.md
+++ b/raw-notes/2024-03-01.md
@@ -13,11 +13,21 @@
   - To see all jQuery methods, in the console you can run `console.log(jQuery());`
 
 ### Thursday
-- SuppSupp helped with a couple technical (customization) tickets [1](https://lw.slack.com/archives/C01T0TSD4SC/p1708752168619759) & [2](https://lw.slack.com/archives/C01SBD5T03V/p1709143942670699)
+- SuppSupp: helped with a couple technical (customization) tickets [1](https://lw.slack.com/archives/C01T0TSD4SC/p1708752168619759) & [2](https://lw.slack.com/archives/C01SBD5T03V/p1709143942670699)
   - First one helped me learn about API a bit more and second one might be a bug
 - [X] Create a flowchart to help standardize and guide support when asking questions
 
 ### Friday
-- [ ] Look at PR notes from G
+- [x] Un-tweak plugin following tests 
+  - For whatever reason, I'm no longer properly grabbing i18n from `windows.i18n` - not sure if that's due to an update or something I did... 
+- [x] Read through [this](https://github.com/the-events-calendar/tribe-common/tree/master/tests/_support/rest-api-tester) to see if there's learning from Luca
+  - Should I change my plugin to also be an options page (instead of or in addition to the shortcode?)
+    - How is the TEC settings page set up? -> nevermind, way too complicated to try to model my plugin after
+    - I added a menu button to easily access 'https://stable.dev.lndo.site/ajax-demo/' (but only 'works' if there's a page already created titled 'Ajax Demo' with the shortcode added to it)
+    - I can come back to this later, but I should probably focus more on the parameters like G and I talked about 
 - [ ] Adjust code - instead of buttons have a form that accepts parameters
   - i.e. posts per page
+  - Overthinking a little bit due to discovery of other plugin - I feel like I should also be building the input fields dynamically, but if I think about it, that doesn't really make sense for what this plugin is
+    - AND I can always build up to something like that... first step is just doing SOMETHING 
+  - My shortcode is getting pretty long - I should move it to a different file soon
+  - Really need to adjust CSS as well, the formatting is making my eye twitch
