--- a/raw-notes/2024-03-15.md
+++ b/raw-notes/2024-03-15.md
@@ -7,8 +7,8 @@
 - [ ] Make admin page WP Standards UI
   - [x] [Submit Button](https://developer.wordpress.org/reference/functions/submit_button/)
   - [x] Copy HTML from WP Settings
-  - [ ] Change output to a notice
-- [ ] Change conditionals from being "if yes, do this" to being "if yes, bail"
+  - [x] Change output to a notice
+- [x] Change conditionals from being "if yes, do this" to being "if yes, bail"
 - [ ] Settings for AJAX Logger
   - [ ] Change to on/off switch and a save button
   - [ ] Make separate class for AJAX Logger (vs. AJAX Demo) -> _should both be in their own class?_
