Notes for April 5

--- a/raw-notes/2024-04-05.md
+++ b/raw-notes/2024-04-05.md
@@ -5,9 +5,10 @@
 - [x] When saving the setting, add checks for permissions and nonces
 - [x] Separate out `render()` and `save()` methods
 - [x] Switch DB application to SequeliACE 
-- [ ] Add note to ORM documenation about bugs for `save()` and `delete()`
+- [x] Add note to ORM documenation about bugs for `save()`
+- [x] Make PR changes  
 - [ ] AJAX Logger functionality
-    - [ ] Only listen and then log if setting is "on"
+    - [x] Only listen and then log if setting is "on"
     - [ ] Output should create a new file (named `ajaxlog-[action-triggered]-[exact-date-of-state].json`)
 
 ## Bonus
@@ -21,3 +22,18 @@
     - [ ] Additional Fields Query
     - [ ] WP CLI + ORM 
 - [ ] Try to find a simple bug ticket I can do a PR for (like changing the doc block template paths again)
+  - https://stellarwp.atlassian.net/browse/CE-208 (Another template override path fix)
+
+## Things to Read Up On 
+- Full Site Editor
+- React in WP environment 
+- SQL (Murder Mystery)
+- Luca's Cookbook 
+
+## Skills I want to develop
+- Code Reviews for others 
+- Writing useful but small code snippets 
+- SQL - reading queries and eventually writing them 
+- Developing tools for the support team 
+  - Tampermonkey? 
+  - Slack bot? - integrate the workflow/Slack template? 
