Added notes for week of May 10th

--- a/raw-notes/2024-05-03.md
+++ b/raw-notes/2024-05-03.md
@@ -24,6 +24,17 @@ This is where the mapping and wires get important to visualize.
 Mutation `===` Change
 
 This is where `let` vs `const` comes in! 
+- `const` creates read only variables - these cannot be pointed to a new value, however in the case of objects the _object's values_ can be mutated 
 
-### Questions for my AJAX Demo JS code
-- When to use `let` vs `const` vs `var` 
+The examples going over object mutation were a bit challenging to wrap my head around, but practicing using the wires and visuals are helpful! 
+
+## Prototypes
+Can tell JS to continue searching for our missing property on a different object by adding `__proto__: other-object` as a property to the child object 
+
+Once the property is found, the search is stopped, regardless if there is a `__proto__` 
+
+There's a default Object Prototype on every JS object, which is where the "built-in" methods come in. This object can be manipulated as well. 
+
+Mutating a shared prototype is called prototype pollution.
+
+Prototypes vs. `__proto__` - this concept is related to how/why JS added classes and the `new` keyword - comparison [here](https://gist.github.com/gaearon/a25fd42a1e6b4cc24851978df0a36571)
