--- a/raw-notes/2024-01-26.md
+++ b/raw-notes/2024-01-26.md
@@ -65,7 +65,7 @@
 - For updating plugins from repo, after `git checkout master && git pull`
   - If the plugin has common (TEC or ET):
    `rm -rf composer.lock vendor && composer install --no-dev && git stash && cd common && rm -rf composer.lock vendor && composer install --no-dev && git stash && cd ..`
-    Doesnt have common:
+    Doesn't have common:
     `rm -rf composer.lock vendor && composer install --no-dev && git stash`
 - The `--no-dev` is important because dev can only be pointing to ONE plugin at a time. If the `--no-dev` is not specified, this can cause issues
 - Learned a lot about REST API 
