--- a/raw-notes/2024-05-17.md
+++ b/raw-notes/2024-05-17.md
@@ -1,6 +1,6 @@
 # Week of May 17
 
 ## GOALS
-- [ ] 1 more PR 
-- [ ] Add to Ticket ORM docs 
-- [ ] Reorganize these dev-day-notes 
+- [x] 1 more PR 
+- [x] Add to Ticket ORM docs 
+- [] Reorganize these dev-day-notes 
