--- a/raw-notes/2024-05-24.md
+++ b/raw-notes/2024-05-24.md
@@ -11,7 +11,7 @@
 - For how to create the PR from the submitted request: 
   - You can use their branch by creating a new remote locally for you to work. 
   - `git remote add fork-jhsoby git@github.com:jhsoby/the-events-calendar.git`
-  - than you look at the branch that person did by doing something like `git fetch fork-jhsoby`
+  - then you look at the branch that person did by doing something like `git fetch fork-jhsoby`
     `git checkout -b issue/4585 fork-jhsoby/master`
     so you will get his master branch to point to your issue/4585
     if it doesnt let you commit directly, just close his PR and open a new open, and cherry-pick his hash
