--- a/raw-notes/2023-12-07.md
+++ b/raw-notes/2023-12-07.md
@@ -38,7 +38,7 @@
 
 ### WP CLI for fresh site:
 ```CLI
-lando wp theme activate twentytwentyone 
-lando wp plugin activate the-events-calendar events-pro event-tickets event-tickets-plus woocommerce query-monitor
+lando wp theme activate twentytwentyone &&
+lando wp plugin activate the-events-calendar events-pro event-tickets event-tickets-plus woocommerce query-monitor &&
 lando wp option update timezone_string 'America/Denver'
 ```
