Notes for July 12 updated

--- a/raw-notes/2024-07-12.md
+++ b/raw-notes/2024-07-12.md
@@ -23,35 +23,43 @@
 1. Make sure you have pulled the changes that you just merged into master 
 2. Create a new branch with `git checkout -b changelogger-[plugin you're changing]`
 3. Make sure that the repo has a `changelog.md` file (if it has a `.txt` file change it to `.md` and if there is no file (common) then make one).
-4. In the `composer.json` file add `"automattic/jetpack-changelogger": "^4.2"` to the end of the `required-devs` 
-5. also add the following after the `"allow-plugins"` section:
+ - Fix existing `changelog.md` to include everything currently in the `readme.txt` changelog section by copying and pasting. 
+ - Search and replace `= \[(.*)\] (.*) =` with `### [$1] $2`
+ - Once you have everything else set up, you can make changes suggested using script `sudo bin/process-changelog.sh` - between each change, stage the `changelog.md` file to keep the changes and then rerun the command to get the next change needed. (if the script is not executable, run `sudo chmod +x ./bin/process-changelog.sh`) 
+4. Add the following after the `"config"` section in `composer.json`:
+
 ```json
- "extra": {
-    "changelogger": {
-      "changelog": "changelog.md",
-      "types": {
-        "version" : "Version",
-        "feat" : "Feature",
-        "tweak" : "Tweak",
-        "fix" : "Fix",
-        "performance" : "Performance",
-        "security" : "Security",
-        "accessibility" : "Accessibility",
-        "compatibility" : "Compatibility",
-        "deprecated" : "Deprecated",
-        "language" : "Language"
-      },
-      "formatter": {
-        "filename": "bin/class-tec-changelog-formatter.php"
-      },
-      "changes-dir": "changelog"
-    }
-  },
+   "extra": {
+      "changelogger": {
+         "changelog": "changelog.md",
+         "types": {
+            "version": "Version",
+            "feat": "Feature",
+            "tweak": "Tweak",
+            "fix": "Fix",
+            "performance": "Performance",
+            "security": "Security",
+            "accessibility": "Accessibility",
+            "compatibility": "Compatibility",
+            "deprecated": "Deprecated",
+            "language": "Language"
+         },
+         "formatter": {
+            "filename": "bin/class-tec-changelog-formatter.php"
+         },
+         "versioning": {
+            "filename": "bin/ModifiedSemverVersioning.php"
+         },
+         "changes-dir": "changelog"
+      }
+   },
+
 ```
-6. In the `package.json` file add `"changelog": "./vendor/bin/changelogger add"` after `glotpress` in the  "scripts" object.
-7. Run `composer update --lock` to make sure the changes are added.
-8. Add and push changes to create a PR, get reviewed, and merge! 
-9. Test that the changelogger is working by running `npm run changelog` 
+5. Run the command `composer require --dev automattic/jetpack-changelogger:^4.2`
+6. In the `package.json` file add `"changelog": "./vendor/bin/changelogger add"` after `build` in the  "scripts" object.
+7. Add and push changes to create a PR, get reviewed, and merge! 
+8. Test that the changelogger is working by running `npm run changelog` 
+9. Run `sudo chmod +x ./bin/process-changelog.sh` to make the command executable. 
 
 ## Other Troubleshooting Notes
 _Delay because something is not loading correctly on my dev site_
@@ -62,4 +70,4 @@ _Delay because something is not loading correctly on my dev site_
 - Stephen was super helpful! Turns out running `composer dumpautoload` in TEC's common was the solution here. 
 
 ## New Project - Dokus Site for Building a Site from the Ground UP
-- Used instructions from here - https://learn.stellarwp.com/topics/setting-up-your-first-site/ 
+- Used instructions from [here](https://learn.stellarwp.com/topics/setting-up-your-first-site/)
