--- a/raw-notes/2023-09-08.md
+++ b/raw-notes/2023-09-08.md
@@ -28,7 +28,7 @@
 5. Run the command `lando wp db prefix` to see the prefix that the tables use. If it is different than `wp_` edit the wp-config.php file to match what it is
 6. Using the following command as an example `lando wp search-replace 'http://customer-domain.com' 'https://stable.dev.lndo.site/'` to modify all database records to point to your local domain
    - If you're unsure of the site's domain, you can look in the wp_options table or run `wp option get siteurl`
-7. If you don't have admin credentials for the site, use the following command to create your own admin user: `lando wp user create sam sam.dokus@theeventscalendar.com --user_pass=password --role=administrator --allow-root`
+7. If you don't have admin credentials for the site, use the following command to create your own admin user: `lando wp user create sam sam.dokus@theeventscalendar.com --user_pass=pass --role=administrator --allow-root`
 8. Go to 'https://stable.dev.lndo.site/' and log in with your admin user
 9. Once you're done you an switch back to your database by following the same process but importing the backup database instead of the customer's
 
