--- a/raw-notes/2023/2023-10-27.md
+++ b/raw-notes/2023/2023-10-27.md
@@ -14,7 +14,7 @@ Now I'm getting errors about a fatal happening when trying to activate ET and I 
   - In the terminal, navigate to the `/plugin` directory 
   - `git clone —recursive [SSH]`
   - `cd` to that plugin's directory
-  - `composer install && nvm use && npm install && npm run build`
+  - `composer install --no-dev && nvm use && npm install && npm run build`
   - If there’s a `/common` directory in the plugin, `cd` into that directory and then `composer install && nvm use && npm install && npm run build` again
 
 - Related Slack convo found [here](https://lw.slack.com/archives/C01SYM19N7K/p1654704588193069)
