Notes from long ago and React Intro notes

--- a/raw-notes/2024/2024-07-12.md
+++ b/raw-notes/2024/2024-07-12.md
@@ -62,7 +62,7 @@
 9. Run `sudo chmod +x ./bin/process-changelog.sh` to make the command executable. 
 
 ## Other Troubleshooting Notes
-_Delay because something is not loading correctly on my dev site_
+- Delay because something is not loading correctly on my dev site_
 - Seems to boil down to files missing in TEC `/vendor` (specifically `php-date-formatter/js`)
 - This looks like not being able to successfully add a ticket to an event.
 - My best guess is that I changed something when I was getting the changelogger set up in TEC
