Update trailing underscore.

--- a/raw-notes/2024/2024-07-12.md
+++ b/raw-notes/2024/2024-07-12.md
@@ -1,11 +1,11 @@
 # Process for Getting Changelogger into each of the TEC Plugins
 
-## Outline of strategy: 
+## Outline of strategy:
 - Merge all global file changes into the `/actions` repo
 - For each plugin, merge the `/actions` PR from directly into master
 - For each plugin, create a new PR that will add the composer and package changes specific to each plugin
 
-## Details 
+## Details
 #### Add Global Files to Actions Repo
 1. Clone the actions repo locally
 2. Create a new branch with the changes you want in all files
@@ -13,19 +13,19 @@
 3. Push the branch to a PR, review, and when merged it will open a PR on each of the plugins
 
 #### Merge PRs from above into each plugin
-1. First, you need to trigger a change in php for tests to run in order to merge. 
-2. Navigate your terminal to the right plugin's directory 
+1. First, you need to trigger a change in php for tests to run in order to merge.
+2. Navigate your terminal to the right plugin's directory
 3. Use this command to checkout the correct branch: `gh pr checkout [number of PR]`
 4. Find a small place in a php file to make a change in a docblock (like fixing a typo or removing an unneeded line break, etc.).
-5. Once all the required tests are passing, review the files, approve the PR, and then merge into master. 
+5. Once all the required tests are passing, review the files, approve the PR, and then merge into master.
 
-#### Open and Merge PR specific to plugin to add the composer and package changes 
-1. Make sure you have pulled the changes that you just merged into master 
+#### Open and Merge PR specific to plugin to add the composer and package changes
+1. Make sure you have pulled the changes that you just merged into master
 2. Create a new branch with `git checkout -b changelogger-[plugin you're changing]`
 3. Make sure that the repo has a `changelog.md` file (if it has a `.txt` file change it to `.md` and if there is no file (common) then make one).
- - Fix existing `changelog.md` to include everything currently in the `readme.txt` changelog section by copying and pasting. 
+ - Fix existing `changelog.md` to include everything currently in the `readme.txt` changelog section by copying and pasting.
  - Search and replace `= \[(.*)\] (.*) =` with `### [$1] $2`
- - Once you have everything else set up, you can make changes suggested using script `sudo bin/process-changelog.sh` - between each change, stage the `changelog.md` file to keep the changes and then rerun the command to get the next change needed. (if the script is not executable, run `sudo chmod +x ./bin/process-changelog.sh`) 
+ - Once you have everything else set up, you can make changes suggested using script `sudo bin/process-changelog.sh` - between each change, stage the `changelog.md` file to keep the changes and then rerun the command to get the next change needed. (if the script is not executable, run `sudo chmod +x ./bin/process-changelog.sh`)
 4. Add the following after the `"config"` section in `composer.json`:
 
 ```json
@@ -57,17 +57,17 @@
 ```
 5. Run the command `composer require --dev automattic/jetpack-changelogger:^4.2`
 6. In the `package.json` file add `"changelog": "./vendor/bin/changelogger add"` after `build` in the  "scripts" object.
-7. Add and push changes to create a PR, get reviewed, and merge! 
-8. Test that the changelogger is working by running `npm run changelog` 
-9. Run `sudo chmod +x ./bin/process-changelog.sh` to make the command executable. 
+7. Add and push changes to create a PR, get reviewed, and merge!
+8. Test that the changelogger is working by running `npm run changelog`
+9. Run `sudo chmod +x ./bin/process-changelog.sh` to make the command executable.
 
 ## Other Troubleshooting Notes
-- Delay because something is not loading correctly on my dev site_
+- Delay because something is not loading correctly on my dev site
 - Seems to boil down to files missing in TEC `/vendor` (specifically `php-date-formatter/js`)
 - This looks like not being able to successfully add a ticket to an event.
 - My best guess is that I changed something when I was getting the changelogger set up in TEC
 - Posted in #tec-dev [here](https://lw.slack.com/archives/C01H7Q57P1C/p1720736244444879)
-- Stephen was super helpful! Turns out running `composer dumpautoload` in TEC's common was the solution here. 
+- Stephen was super helpful! Turns out running `composer dumpautoload` in TEC's common was the solution here.
 
 ## New Project - Dokus Site for Building a Site from the Ground UP
 - Used instructions from [here](https://learn.stellarwp.com/topics/setting-up-your-first-site/)
